@@ -24,6 +24,7 @@ Version 1.11.0+svn:
  * Miscellaneous and bug fixes:
    * Fix invalid memory access crash resulting from deleting all saved games
      in the Load Game dialog.
+   * Fix OOS when dismissing a recall in a multiplayer campaign (bug #19924).
 
 
 Version 1.11.0:
