@@ -32,6 +32,7 @@ Version 1.11.0+svn:
      in the Load Game dialog
    * Removed two Khalifate leftovers (Hakim portrait and KHALIFATE_NAMES macro)
    * Hex field size and default terrain are wml configurable
+   * Fix OOS when dismissing a recall in a multiplayer campaign (bug #19924).
 
 Version 1.11.0:
  * Add-ons client:
